# InvestAI

./: .gitignore  ARCHITECTURE.md  README.md  devbox.json  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  app.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 84b9b66be34d_add_symbols_table.py  a1b2c3d4e5f6_add_price_candles_table.py  c2d3e4f5a6b7_add_users_table.py  d4e5f6a7b8c9_add_symbol_sector_industry.py
backend/app/: __init__.py  indicators.py  main.py
backend/app/api/v1/: __init__.py  auth.py  gex.py  markets.py  options.py  quotes.py  symbols.py
backend/app/core/: __init__.py  auth.py  config.py  database.py
backend/app/gex/: __init__.py  backtest.py
backend/app/markets/: summary.py
backend/app/models/: __init__.py  price_candle.py  symbol.py  user.py
backend/app/repositories/: __init__.py  price_candle.py  symbol.py  user.py
backend/app/schemas/: __init__.py  auth.py  indicators.py  markets.py  options.py  price_candle.py  quotes.py  symbol.py
backend/app/schwab/: __init__.py  client.py  env.py  fetch.py  fetch_bulk.py  fetch_incremental.py  fetch_intraday.py  fundamentals.py  generate_token.py  market_hours.py  movers.py  options.py  quotes.py  search.py
config/: .env.example
frontend/app/: globals.css  layout.tsx  page.tsx  theme.css
frontend/components/: AppBar.tsx  CandleTable.tsx  ChartContainer.tsx  CollapsibleSection.tsx  DashboardLayout.tsx  DataTable.tsx  FilterBar.tsx  IndicatorChart.tsx  LiveQuote.tsx  MetricsGrid.tsx  ScoreBreakdown.tsx  SplitPane.tsx  (+4 more)
scripts/: __init__.py
(+9 files in other folders)
